public/css/custom.css
/* General */

body > .content, .ui.top-header > .grid {
	max-width: 1000px;
	margin: 15px auto;
	padding: 0 1rem;
}

.hoverable {
	cursor: pointer!important;
}

#about h4.ui.header {
	margin-top: .75em;
}

/* Menu */

.selected {
	box-shadow: 0 2px 0 inset;
}

/* Google Map */

#map {
	height: 400px;
	margin-top: 1em;
}

/* Custom Colors */

.ui.top-header {
	background-color: #298E10;
}

.ui.top-header > .grid {
	margin-top: 0;
}

.ui.about.button {
	float: right;
	background-color: white;
}

/* Landing Page */

.background-image {
	background-image: url('/images/landing-photo.jpg');
	background-position: center;
	background-size: cover;
	height: 50em;
	margin-top: 3em;
	padding: 1em 3em;
	border-radius: 5px;
}

.background-image #query {
	width: 30em;
}

.ui.message {
	background-color: white!important;
}

.ui.message p {
	color: black;
}

/* Mobile Screen CSS */

@media screen and (max-width: 480px) {
	body {
		font-size: .75em;
	}

	.ui.stackable.grid > .column:not(.row) {
		padding-left: 0!important;
		padding-right: 0!important;
	}

	#query.ui.input {
		font-size: 1.15em;
	}

	.ui.air.table th:nth-child(6), .ui.air.table td:nth-child(6) {
		display: none;
	}

	#map {
		height: 200px;
	}

	.background-image {
		height: 30em;
		padding: .5em 1em;
	}

	.background-image #query {
		width: 20em;
	}
}

